styles.css
* {
    margin: 0;
    padding: 0;
}
body {
  background-color: #3149FF;
}

#hexGrid {
    background: url("images/WorldMap.webp") ;
  display: flex;
  background-size: contain;
  background-repeat: no-repeat;
  flex-wrap: wrap;
    width: 1523px;
      margin: 0 auto;
  margin-top: 10%;
  font-family: 'Raleway', sans-serif;
  font-size: 15px;
  list-style-type: none;

}


.hex {
  position: relative;
  visibility:hidden;
  outline:1px solid transparent; /* fix for jagged edges in FF on hover transition */
    -webkit-transform: rotate3d(0,0,1,90deg) skewY(0deg);
      -ms-transform: rotate3d(0,0,1,90deg) skewY(0deg);
          transform: rotate3d(0,0,1,90deg) skewY(0deg);
}
.hex::after{
  content:'';
  display:block;
  padding-bottom: 86.602%;  /* =  100 / tan(60) * 1.5 */
}
.hexIn{
  position: absolute;
  width:96%;
  padding-bottom: 110.851%; /* =  width / sin(60) */
  margin:0 2%;
  overflow: hidden;
  visibility: hidden;
  outline:1px solid transparent; /* fix for jagged edges in FF on hover transition */
  -webkit-transform: rotate3d(0,0,1,-60deg) skewY(30deg);
      -ms-transform: rotate3d(0,0,1,-60deg) skewY(30deg);
          transform: rotate3d(0,0,1,-60deg) skewY(30deg);
}
.hexIn * {
  position: absolute;
  visibility: visible;
  outline:1px solid transparent; /* fix for jagged edges in FF on hover transition */
}
.hexLink {
    display:block;
    width: 100%;
    height: 100%;
    text-align: center;
    background: #ffffff11;
    color: #fff;
    overflow: hidden;
    -webkit-transform: skewY(-30deg) rotate3d(0,0,1,60deg);
        -ms-transform: skewY(-30deg) rotate3d(0,0,1,60deg);
            transform: skewY(-30deg) rotate3d(0,0,1,60deg);
}

/*** HEX CONTENT **********************************************************************/
.hex img {
  left: -100%;
  right: -100%;
  width: auto;
  height: 100%;
  margin: 0 auto;
  -webkit-transform: rotate3d(0,0,0,0deg);
      -ms-transform: rotate3d(0,0,0,0deg);
          transform: rotate3d(0,0,0,0deg);
}

.hex h1, .hex p {
  width: 100%;
  padding: 5%;
  box-sizing:border-box;
  background-color: rgba(0, 128, 128, 0.8);
  font-weight: 300;
  -webkit-transition:  -webkit-transform .2s ease-out, opacity .3s ease-out;
          transition:          transform .2s ease-out, opacity .3s ease-out;
}
.hex h1 {
  bottom: 50%;
  padding-top:50%;
  font-size: 1.5em;
  z-index: 1;
  -webkit-transform:translate3d(0,-100%,0);
      -ms-transform:translate3d(0,-100%,0);
          transform:translate3d(0,-100%,0);
}
.hex h1::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 45%;
  width: 10%;
  text-align: center;
  border-bottom: 1px solid #fff;
}
.hex p {
  top: 50%;
  padding-bottom:50%;
  -webkit-transform:translate3d(0,100%,0);
      -ms-transform:translate3d(0,100%,0);
          transform:translate3d(0,100%,0);
}

.selected-box {
    position: absolute;
    top: 10%;
    margin: auto;
    text-align: center;
    left: 0;
    right: 0;
    background: white;
    border: 1px solid black;
    width: 10%;
    min-width: 200px;
    padding: 5px;
}

.button{
  width:50%;
  background: #ffcccb;
  border: 1px solid black;
  transition: all .2s ease-out;
  margin:auto;
}

.botton:hover{
  background: #333333
}


/*** HOVER EFFECT  **********************************************************************/
.hexLink:hover h1, .hexLink:focus h1,.hexLink:hover, .hexLink:focus
.hexLink:hover div, .hexLink:focus div,
.hexLink:hover p, .hexLink:focus p{
 background-color: #ff000033;
}


    .hex:nth-child(n+1) {
margin-left: 1.87%;
}

  #hexGrid{
    padding-bottom: 4.4%
  }
  .hex {
    width: 47px;
    height: 47px;
    margin-bottom: -25px;  
  }
 
  .hex:nth-child(20n+1){ /* first hexagon of odd rows */
    margin-left:5px; 
    /*visibility: visible;*/
    /*background-color: #00ff0066;*/
  }

   .hex:nth-child(40n+21){ /* first hexagon of even rows */
    margin-left:42px; 
    /*background-color: #ff000044;*/
  }

